# driveoff

./: .gitignore  .pylintrc  README.md  TODO.md  pyproject.toml
.github/workflows/: frontend-gh-pages-build.yaml  python-checks.yaml
Project-Archive-RoCrate-Profile/: Gemfile  RO-CrateLog.xcf  _config.yml  index.md  projectArchiveCrate.soss.json  project_archivecrate_mode.json
Project-Archive-RoCrate-Profile/exampleCrate/: ro-crate-metadata.json
Project-Archive-RoCrate-Profile/terms/eres-project-archive/: context.jsonld  readme.md  vocabulary.csv
modes/: .env.development  .env.production
scripts/: activescale_cli.py  check_activescale.sh  profile_memory.py
src/: config.py
src/api/: README.md  activescale.py  archive_chunks.py  archive_reassembly.py  cors.py  dependencies.py  fake_resdrive.py  main.py  manifests.py  projectdb.py  security.py
src/api/routers/: __init__.py  drives.py  retrievals.py  submissions.py
src/api/tests/: test_requests.http
src/cli/: README.md  __init__.py  activescale.py  cli.py  get_project_info.py  initiate_offboard.py  project_info_handler.py  test_get_project_info.py
src/cli/projectarchivecrate/: robuilder.py
src/config/: config.py
src/crate/: ro_builder.py  ro_loader.py
src/helper/: rocrate.py
src/models/: common.py  manifest.py  member.py  models.py  person.py  project.py  project_changes.py  request.py  response.py  retrieval.py  role.py  services.py  submission.py
src/packaging/: archive_chunks.py
src/service/: activescale.py  projectdb.py  projectdb_client.py  projectdb_helpers.py  research_drive.py  research_drive_service.py  research_drive_smb.py
src/utils/: job_reconciliation.py  logging.py  paths.py
src/workers/: __init__.py  retrieval_worker.py  submission_worker.py
tests/: README.md  conftest.py  factories.py  test-requests.http  test_activescale.py  test_activescale_cli.py  test_archive_chunks.py  test_archive_reassembly.py  test_builder.py  test_chunked_upload.py  test_chunked_workflow_integration.py  test_cleanup.py  test_factories.py  test_project_changes.py  test_retrieval_api.py  test_retrieval_model.py  test_rocrate.py  test_submission_api.py  test_submission_model.py
web/: .prettierrc.json  README.md  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  fixtures.ts  main.ts  project.d.ts  project.ts  store.ts  vite-env.d.ts
web/src/__tests__/: CustomRetentionPeriodView.spec.ts
web/src/assets/: btn.css  error.css  form.css  main.css  text.css
web/src/client/: index.ts  requestInfo.ts  sdk.gen.ts  types.gen.ts
web/src/models/: helpers.ts
web/src/router/: index.ts
web/src/service/: requestInfo.ts
web/src/views/: AlreadyArchivedView.vue  CheckDetailsView.vue  ConfirmArchiveView.vue  CustomRetentionPeriodView.vue  DataClassificationView.vue  FinishView.vue  HomeView.vue  IncorrectProjectDetails.vue  RetentionPeriodView.vue  ServiceErrorView.vue  SummaryView.vue  UnableToArchiveView.vue  UpdateDetailsView.vue
