[tool.poetry]
name = "driveoff"
version = "0.1.0"
description = "Prototype for research drive offboarding and archiving, from IDS team."
authors = ["Chris Seal <c.seal@auckland.ac.nz>", "Noel Zeng", "Libby Li", "James Love", "Andrew Wilson"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"
bagit = "^1.8.1"
factory-boy = "^3.3.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
mypy = "^1.11.2"
coverage = "^7.6.1"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = [
       "src/**/*.py"
	  ]
ignore_missing_imports = true
exclude = [
       "^tests/.*$"
       ]
strict = true

[tool.pytest.ini_options]
pythonpath = "src tests"
testpaths= ["tests"]